roles/docker-envoy/files/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route

                  virtual_hosts:
                    - name: home-assistant
                      domains: ["hass.lan", "hass.lan:*"] # match exact host
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: home-assistant

                    - name: zigbee2mqtt
                      domains: ["z2m.lan", "z2m.lan:*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: zigbee2mqtt
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: home-assistant
      connect_timeout: 30s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: home-assistant
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.88.88
                      port_value: 8123
    - name: zigbee2mqtt
      connect_timeout: 30s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: zigbee2mqtt
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.88.88
                      port_value: 8124
